hphp/hack/test/typecheck/ffp/throw_yield.php.exp
File "throw_yield.php", line 5, characters 9-15:
Yield can only appear as a statement or on the right of an assignment (Parsing[1002])
